--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "pbfy00@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-minify": "^0.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "pixi.js": "^4.6.2"
   }
 }
