--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-minify": "^0.2.0",
     "babel-minify-webpack-plugin": "^0.2.0",
     "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.5",
+    "worker-loader": "^1.1.0"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
